--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# macOS files
+.DS_Store
+
+# Clion Files
+cmake-build-debug
+CMakeLists.txt
+
+# Idea files
+.idea
